--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out repository code
+        uses: actions/checkout@v3
       - name: Install modules
         run: yarn
       - name: Run ESLint
-        run: eslint src --ext vue,ts
+        run: yarn run eslint src --ext vue,ts
     
