--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
+    "typescript": "^4.6.3",
     "vite": "^2.9.0"
   },
   "lint-staged": {
