--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "@vitejs/plugin-vue": "^2.3.0",
